--- a/microservices/oauth2-service/pom.xml
+++ b/microservices/oauth2-service/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -21,8 +22,9 @@
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
 	</properties>
 
+	<!-- ================= DEPENDÊNCIAS ================= -->
 	<dependencies>
-		<!-- Web e Security -->
+		<!-- ===== Spring Boot Core ===== -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -35,12 +37,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
-
-		<!-- JPA / Banco de dados -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<!-- ===== Banco de Dados ===== -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -52,7 +54,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Feign / Eureka -->
+		<!-- ===== Spring Cloud ===== -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
@@ -62,14 +64,14 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
-		<!-- Lombok -->
+		<!-- ===== Lombok ===== -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
 
-		<!-- Devtools e Testes -->
+		<!-- ===== Devtools e Testes ===== -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -87,16 +89,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Google API Client e OAuth -->
+		<!-- ===== Google API Client ===== -->
 		<dependency>
 			<groupId>com.google.api-client</groupId>
 			<artifactId>google-api-client</artifactId>
 			<version>2.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.oauth-client</groupId>
-			<artifactId>google-oauth-client</artifactId>
-			<version>1.40.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.http-client</groupId>
@@ -105,6 +102,7 @@
 		</dependency>
 	</dependencies>
 
+	<!-- ================= GERENCIAMENTO DE DEPENDÊNCIAS ================= -->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -117,8 +115,10 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<!-- ================= BUILD ================= -->
 	<build>
 		<plugins>
+			<!-- ===== Compiler Plugin ===== -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -137,10 +137,13 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+
+			<!-- ===== Spring Boot Plugin ===== -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
