--- a/microservices/auth-service/src/main/resources/application.properties
+++ b/microservices/auth-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=auth-service
 server.port=8083
 
-spring.profiles.active=${APP_PROFILE:dev}
+spring.profiles.active=${APP_PROFILE:test}
 
 # Eureka Client
 eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
