--- a/microservices/user-service/src/main/resources/application.properties
+++ b/microservices/user-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=user-service
 server.port=8082
 
-spring.profiles.active=${APP_PROFILE:dev}
+spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 logging.level.org.springframework.security=DEBUG
 
