--- a/docker/docker-compose.staging.yaml
+++ b/docker/docker-compose.staging.yaml
@@ -190,27 +190,27 @@ services:
       - livo-network
 
 
-#  # ---------------------- #
-#  # 🏛️ LIBRARY SERVICE     #
-#  # ---------------------- #
-#  library-service:
-#    build:
-#      context: ../microservices/library-service
-#      dockerfile: Dockerfile
-#    container_name: library-service
-#    ports:
-#      - "8085:8085"
-#    depends_on:
-#      - postgres-library
-#      - discovery-server
-#    environment:
-#      APP_PROFILE: staging
-#      SPRING_DATASOURCE_URL: ${LIBRARY_SPRING_DATASOURCE_URL_DOCKER}
-#      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
-#      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
-#      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
-#    networks:
-#      - livo-network
+  # ---------------------- #
+  # 🏛️ LIBRARY SERVICE     #
+  # ---------------------- #
+  library-service:
+    build:
+      context: ../microservices/library-service
+      dockerfile: Dockerfile
+    container_name: library-service
+    ports:
+      - "8085:8085"
+    depends_on:
+      - postgres-library
+      - discovery-server
+    environment:
+      APP_PROFILE: staging
+      SPRING_DATASOURCE_URL: ${LIBRARY_SPRING_DATASOURCE_URL_DOCKER}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+    networks:
+      - livo-network
 
 # ---------------------- #
 # 🌐 NETWORK & VOLUMES    #
