--- a/microservices/library-service/src/main/resources/application-dev.properties
+++ b/microservices/library-service/src/main/resources/application-dev.properties
@@ -7,5 +7,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-api.security.token.secret=dev-secret-key
+eureka.instance.hostname=localhost
+
+# Security (JWT)
+api.security.token.secret=${JWT_SECRET:dev-secret-key}
