--- a/microservices/library-service/src/main/resources/application.properties
+++ b/microservices/library-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.open-in-view=false
 logging.level.org.springframework.security=DEBUG
 
 # Eureka Client
-# A URL do Eureka server será definida no docker-compose ou variável de ambiente
+# A URL do Eureka server sera definida no docker-compose ou variavel de ambiente
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
 eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=library-service
+eureka.instance.hostname=localhost
