--- a/microservices/library-service/src/main/resources/application.properties
+++ b/microservices/library-service/src/main/resources/application.properties
@@ -10,3 +10,6 @@ logging.level.org.springframework.security=DEBUG
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
+
+# Security (JWT)
+api.security.token.secret=${JWT_SECRET:jwt-secret-long-test-key-for-development}
