--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -32,6 +32,8 @@ spring:
             - Path=/library/**
 
 eureka:
+  instance:
+    non-secure-port: ${PORT:8080}
   client:
     service-url:
       defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka}
