--- a/docker/docker-compose.staging.yaml
+++ b/docker/docker-compose.staging.yaml
@@ -131,6 +131,7 @@ services:
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      LIBRARY_SERVICE_URL: http://library-service:8085
     networks:
       - livo-network
 
@@ -151,15 +152,16 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       SPRING_DATASOURCE_URL: ${AUTH_SPRING_DATASOURCE_URL_DOCKER}
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
-      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD} 
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      USER_SERVICE_URL: http://user-service:8082
     networks:
       - livo-network
     #restart: always
 
-  # ---------------------- #
-  # 📚 BOOK SERVICE        #
-  # ---------------------- #
+    # ---------------------- #
+    # 📚 BOOK SERVICE        #
+    # ---------------------- #
   book-service:
     build:
       context: ../microservices/book-service
@@ -176,9 +178,9 @@ services:
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      LIBRARY_SERVICE_URL: http://library-service:8085
     networks:
       - livo-network
-
 
   # ---------------------- #
   # 🏛️ LIBRARY SERVICE     #
